[tool.poetry]
name = "image-embedding"
version = "0.1.0"
description = ""
authors = ["Andrei-Cristian Rad <andrei.rad@connatix.com>"]
readme = "README.md"
packages = [{include = "image_embedding"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-2.1.0-cp310-none-macosx_11_0_arm64.whl", platform = "darwin"},
]
torchvision = [
    {url = "https://download.pytorch.org/whl/cpu/torchvision-0.13.0-cp310-cp310-macosx_11_0_arm64.whl", platform = "darwin"},
]
onnx = "^1.16.2"
onnxruntime = "^1.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
